Updating login urls

--- a/pawseyportal/userportal/templates/userportal/base.html
+++ b/pawseyportal/userportal/templates/userportal/base.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <img src="{% static 'userportal/images/PawseyLogoHorizontal.png' %}" alt="Pawsey Supercomputing Centre">
-        <h2>Announcements</h2>
+        <h2>Pawsey User Portal</h2>
         
         <hr>
         {% block content %}{% endblock %}
